--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1"
 bincode = "1.3"
 clap = { version = "4", features = ["derive"] }
 futures = "0.3"
+hex = "0.4"
 rand = "0.8"
 serde = { version = "1", features = ["derive"] }
 sha2 = "0.10"
